deploy-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: deployment-nginx
   labels:
      app: nginx
spec:
   selector:
       matchLabels:
           app: nginx
   replicas: 1
   template:
        metadata:
             name: nginx-pod
             labels:
                app: nginx
        spec:
            containers:
               - name: nginx-cont-deploy
                 image: nginx
                 resources:
                     limits:
                        cpu: 100m
                     requests:
                        cpu: 100m
