liveness-probe.yaml
apiVersion: v1
kind: Pod
metadata:
   name: pod-liveness-probe
   labels:
      test: liveness-probe
spec:
   containers:
        - name: liveness-probe-cont
          image: busybox
          args:
            - /bin/sh
            - -c
            - touch file; sleep 20; rm -rf /file; sleep 600
          livenessProbe:
              exec:
                command:
                   - cat
                   - /file
              initialDelaySeconds: 5
              periodSeconds: 10
