pod-configmap-env.yaml
apiVersion: v1
kind: Pod
metadata:
   name: config-sample-env
spec:
   containers:
       - name: config-cont
         image: busybox
         command: ["/bin/sh"]
         args: ["-c", "sleep 600"]
