pod-configmap-vol.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: pod-vol-config
spec:
  volumes:
      - name: config-vol
        configMap:
           name: configmap-sample
  containers:
     - name: config-vol
       image: busybox
       command: ["/bin/sh"]
       args: ["-c", "sleep 600"]
       volumeMounts:
          - name: config-vol
            mountPath: /config
