pod-nginx.yaml
apiVersion: v1
kind: Pod
metadata:
     name: pod-nginx
     labels:
         app: nginx
spec:
    containers:
       - name: niginx-cont
         image: nginx
    nodeSelector:
            disk: "fast"
