pod-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-pvc
  labels:
     app: pvc
spec:
  volumes:
     - name: host-volume
       persistentVolumeClaim:
         claimName: pvc-volume
  containers:
    - name: simple
      image: busybox
      command: ["/bin/sh"]
      args: ["-c", "sleep 600"]
      volumeMounts:
        - name: host-volume
          mountPath: /pod/my-data
