pod-secret-env.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: pod-secret
spec:
 containers:
   - name: secret-cont
     image: busybox
     command: ["/bin/sh"]
     args: ["-c", "sleep 600"]
