pod-secret-vol.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-secret-vol
spec:
  volumes:
     - name: secret-volume
       secret:
          secretName: secret-sample
  containers:
     - name: vol-secret
       image: busybox
       command: ["/bin/sh"]
       args: ["-c", "sleep 600"] 
       volumeMounts:
          - name: secret-volume
            mountPath: /secret
