pod-stateless.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
   name: deploy-stateless
   labels: 
      deploy: stateless
spec:
   replicas: 2
   selector:
      matchLabels:
          test: stateless
   template:
        metadata:
            name: pod-stateless
            labels:
              test: stateless
        spec:
          volumes:
              - name: pvc-stateless-vol
                persistentVolumeClaim:
                    claimName: pvc-volume
          containers:
              - name: stateless-container
                image: nginx
                volumeMounts:
                  - name: pvc-stateless-vol  
                    mountPath: /stateless-cont-path
