init-cont.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
        name: init
        labels:
            app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      name: nginx-pod
      labels:
        app: nginx   
    spec:
      volumes:
        - name: init-volume
          emptyDir: {}
      containers:
         - name: nginx
           image: nginx
           volumeMounts:
             - name: init-volume
               mountPath: /usr/share/nginx/html               
---
apiVersion: v1
kind: Service
metadata:
     name: node-port-service
spec:
    type: NodePort
    selector: 
       app: nginx
    ports:
       - port: 80
         targetPort: 80
         nodePort: 30002
