nodeport.yaml
apiVersion: v1
kind: Service
metadata:
     name: node-port-service
     labels:
         app: service
spec:
   selector:
      app: nginx
   type: NodePort
   ports:
     - port: 80
       targetPort: 80
       nodePort: 30002
